-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b27
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8012060 | 8 | Harold Seigel | P3 | Closed | Fixed | b86 |
While testing the changes for 8010463, I ran into the following failure mode when running through jprt:
[Verifying threads syms strs zone dict #
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (instanceKlass.cpp:3183), pid=24980, tid=2
# guarantee(length == 0) failed: invalid method ordering length
#
# JRE version: (8.0-b82) (build )
# Java VM: Java HotSpot(TM) Server VM (25.0-b23 interpreted mode solaris-x86 )
# Core dump written. Default location: /export/bugs/8010463/core or core.24980
#
# An error report file with more information is saved as:
# /export/bugs/8010463/hs_err_pid24980.log
Phoning home...
Using server: 10.161.186.18, port 4711
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Abort (core dumped)
from the clienttest targets.
Command Line:
/java/re/jdk/8/latest/binaries/solaris-i586/bin/java -server -XX:+UnlockDiagnosticVMOptions -XX:+VerifyBeforeGC -Xshare:dump
In a debug build this has the following stack trace:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/export/workspaces/8010463/src/share/vm/oops/instanceKlass.cpp:3195), pid=24975, tid=2
# guarantee(length == 0) failed: invalid method ordering length
#
# JRE version: (8.0-b58) (build )
# Java VM: Java HotSpot(TM) Server VM (25.0-b25-internal-jvmg interpreted mode solaris-x86 )
# Core dump written. Default location: /export/bugs/8010463/core or core.24975
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0806b400): JavaThread "Unknown thread" [_thread_in_vm, id=2, stack(0xfd50f000,0xfd55f000)]
Stack: [0xfd50f000,0xfd55f000], sp=0xfd55e630, free space=317k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xdcacfc] void VMError::report(outputStream*)+0xdec
V [libjvm.so+0xdcc055] void VMError::report_and_die()+0x735
V [libjvm.so+0x6ae01b] void report_vm_error(const char*,int,const char*,const char*)+0x8b
V [libjvm.so+0x878f94] void InstanceKlass::verify_on(outputStream*)+0xb54
V [libjvm.so+0x5d724d] void Klass::verify()+0x3d
V [libjvm.so+0x750a54] void Dictionary::verify()+0x244
V [libjvm.so+0xd1cc43] void SystemDictionary::verify()+0xf3
V [libjvm.so+0xd8078a] void Universe::verify(bool,VerifyOption)+0x1aa
V [libjvm.so+0x69147f] void Universe::verify(bool)+0xf
V [libjvm.so+0x68f213] void Universe::verify()+0x13
V [libjvm.so+0xd5461e] int Threads::create_vm(JavaVMInitArgs*,bool*)+0x57e
V [libjvm.so+0x92ac0a] JNI_CreateJavaVM+0xfa
C [libjli.so+0x6edc] JavaMain+0x13c
C [libc.so.1+0xa73b7] _thr_setup+0x4e
C [libc.so.1+0xa76a0] __moddi3+0x60
[Verifying threads syms strs zone dict #
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (instanceKlass.cpp:3183), pid=24980, tid=2
# guarantee(length == 0) failed: invalid method ordering length
#
# JRE version: (8.0-b82) (build )
# Java VM: Java HotSpot(TM) Server VM (25.0-b23 interpreted mode solaris-x86 )
# Core dump written. Default location: /export/bugs/8010463/core or core.24980
#
# An error report file with more information is saved as:
# /export/bugs/8010463/hs_err_pid24980.log
Phoning home...
Using server: 10.161.186.18, port 4711
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Abort (core dumped)
from the clienttest targets.
Command Line:
/java/re/jdk/8/latest/binaries/solaris-i586/bin/java -server -XX:+UnlockDiagnosticVMOptions -XX:+VerifyBeforeGC -Xshare:dump
In a debug build this has the following stack trace:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/export/workspaces/8010463/src/share/vm/oops/instanceKlass.cpp:3195), pid=24975, tid=2
# guarantee(length == 0) failed: invalid method ordering length
#
# JRE version: (8.0-b58) (build )
# Java VM: Java HotSpot(TM) Server VM (25.0-b25-internal-jvmg interpreted mode solaris-x86 )
# Core dump written. Default location: /export/bugs/8010463/core or core.24975
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0806b400): JavaThread "Unknown thread" [_thread_in_vm, id=2, stack(0xfd50f000,0xfd55f000)]
Stack: [0xfd50f000,0xfd55f000], sp=0xfd55e630, free space=317k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xdcacfc] void VMError::report(outputStream*)+0xdec
V [libjvm.so+0xdcc055] void VMError::report_and_die()+0x735
V [libjvm.so+0x6ae01b] void report_vm_error(const char*,int,const char*,const char*)+0x8b
V [libjvm.so+0x878f94] void InstanceKlass::verify_on(outputStream*)+0xb54
V [libjvm.so+0x5d724d] void Klass::verify()+0x3d
V [libjvm.so+0x750a54] void Dictionary::verify()+0x244
V [libjvm.so+0xd1cc43] void SystemDictionary::verify()+0xf3
V [libjvm.so+0xd8078a] void Universe::verify(bool,VerifyOption)+0x1aa
V [libjvm.so+0x69147f] void Universe::verify(bool)+0xf
V [libjvm.so+0x68f213] void Universe::verify()+0x13
V [libjvm.so+0xd5461e] int Threads::create_vm(JavaVMInitArgs*,bool*)+0x57e
V [libjvm.so+0x92ac0a] JNI_CreateJavaVM+0xfa
C [libjli.so+0x6edc] JavaMain+0x13c
C [libc.so.1+0xa73b7] _thr_setup+0x4e
C [libc.so.1+0xa76a0] __moddi3+0x60
- backported by
-
JDK-8012060 guarantee(length == 0) failed: invalid method ordering length
-
- Closed
-